// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Timeline Item render - Horizontal 1`] = `
<div
  class="sc-Axmtr hYmEjG horizontal"
  data-testid="timeline-item"
>
  <div
    class="sc-fzozJi hdDtNg"
  >
    <div
      class="sc-fzoLsD jJElQn horizontal active"
      data-testid="timeline-circle"
    />
  </div>
  <div
    class="sc-fzpans jyHixq horizontal top"
    data-testid="timeline-title"
  >
    <div
      class="sc-AxheI eBxqlH active"
      title="test title"
    >
      test title
    </div>
  </div>
</div>
`;

exports[`Test Timeline Item render - Vertical 1`] = `
<div
  class="sc-Axmtr hYmEjG vertical"
  data-testid="timeline-item"
>
  <div
    class="sc-fzozJi hdDtNg"
  >
    <div
      class="sc-fzoLsD jJElQn vertical active"
      data-testid="timeline-circle"
    />
  </div>
  <div
    class="sc-fzplWN cvmzSX vertical"
  >
    <div
      class="sc-fzpans jyHixq vertical bottom"
      data-testid="timeline-title"
    >
      <div
        class="sc-AxheI eBxqlH active"
        title="test title"
      >
        test title
      </div>
    </div>
    <div
      class="sc-AxjAm egePtC active"
    >
      <span
        class="sc-AxirZ itZkid"
      >
        This is a test content
      </span>
      <div
        class="sc-AxhUy ftcwA-d show-less"
      >
        <p
          class="sc-AxhCb iaRluf"
        />
      </div>
      <span
        class="sc-AxgMl bJuvTb show-more"
        role="button"
      >
        show more
      </span>
    </div>
  </div>
</div>
`;
